Version 2.33 May 04, 2021
------------------------------


Version 2.32 Jun 02, 2020
------------------------------
- Trait usage fixed.

Version 2.31 Mar 04, 2020
------------------------------
- Setting "Check registration" added.
- Fix for ut8_decode function.

Version 2.30 Dec 24, 2019
------------------------------
- Bug fixes and other minor improvements

Version 2.29 Aug 13, 2019
------------------------------	
- Add protection for personal messages
- Spanish translation
- Bug fixes and other minor improvements

Version 2.28 Jun 24, 2019
------------------------------	
- Optimize settings
- Remote calls support	
- Bug fixes and other minor improvements

Version 2.27 Apr 15, 2019
------------------------------		
- Bug fixes and other minor improvements

Version 2.26 Mar 01, 2019
------------------------------		
- Fix admin checking with custom contact forms option enabled
- Fix JS checking
- Bug fixes and other minor improvements

Version 2.25 Nov 02, 2018
------------------------------		
- Show a real name for the Newbie membergroup on the mod settings page
- Bug fixes and other minor improvements

Version 2.24 Oct 10, 2018
------------------------------		
- CDN support
- Lib class updated
- Move mod settings to a separate tab
- Bug fixes and other minor improvements

Version 2.23 June 9, 2018
------------------------------		
- Bug fixes and other minor improvements

Version 2.22 June 4, 2018
------------------------------		
- The check exception: Private messages.
- Minor fixes.

Version 2.21 April 16, 2018
------------------------------		
- Bug fixes and other minor improvements

Version 2.20 December 24, 2017
------------------------------		
- New option for email notifications
- New option for custom contact form checking

Version 2.19 December 24, 2017
------------------------------		
- Support Cloudflare CDN

Version 2.18 October 30, 2017
------------------------------		
- Bug fixes and other minor improvements

Version 2.17 October 26, 2017