@@ -562,10 +562,12 @@
 		<readme type="inline" parsebbc="true">This upgrade for Antispam by Cleantalk from 2.32 to 2.33 version:
 			- Added the ability to check the search form.
 			- Sending plugin settings in a request.
+			- Fix js_key
 		</readme>
 		<readme type="inline" parsebbc="true" lang="russian-utf8">Обновление Анти-спама от Cleantalk с версии 2.32 до 2.33:
 			- Добавление возможности проверять формы поиска.
 			- Отправка настроек плагина в запросе.
+			- js_keys отправляются корректно
 		</readme>
 
 		<!-- Cleaning up old data -->
